--- a/VendaPedido/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/VendaPedido/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -11,7 +11,7 @@
         <h:outputStylesheet library="css" name="sistema.css"/>
    </h:head>
    
-   <body>
+   <h:body>
    	<header>
    		<div>
    			<h:link>
@@ -19,7 +19,7 @@
    			</h:link>
    		</div>
    	</header>
-   </body>
+   </h:body>
    
    <div id="conteudo">
    <ui:insert name="corpo"/>
