--- a/VendaPedido/src/main/webapp/WEB-INF/template/pedidos/DadosEntregaPedido.xhtml
+++ b/VendaPedido/src/main/webapp/WEB-INF/template/pedidos/DadosEntregaPedido.xhtml
@@ -5,13 +5,13 @@
     xmlns:p="http://primefaces.org/ui">
 
 	<p:panelGrid columns="4" style="width: 100%" columnClasses="rotulo, campo, rotulo, campo">
-		<p:outputLabel value="Data de entrega" for="dataEntrega"/>
-		<p:calendar id="dataEntrega" size="10" pattern="dd/MM/yyyy"/>
+		<p:outputLabel value="Data da entrega" for="dataEntrega" />
+		<p:calendar id="dataEntrega" size="10" pattern="dd/MM/yyyy" />
 		
-		<p:spacer/>
-		<p:spacer/>
-		
-		<p:outputLabel value="Logradouro" for="entregaLogradouro" />
+		<p:spacer />
+		<p:spacer />
+	
+        <p:outputLabel value="Logradouro" for="entregaLogradouro" />
         <p:inputText id="entregaLogradouro" size="50" />
 
         <p:outputLabel value="Número" for="entregaNumero" />
@@ -28,7 +28,6 @@
 
         <p:outputLabel value="CEP" for="entregaCep" />
         <p:inputText id="entregaCep" size="10" />
-		
 	</p:panelGrid>
   	
 </ui:composition>
