--- a/VendaPedido/src/main/webapp/resources/css/sistema.css
+++ b/VendaPedido/src/main/webapp/resources/css/sistema.css
@@ -114,3 +114,7 @@ h1 {
     background: url(#{resource['images:seta-para-baixo.png']}) no-repeat;
 }
 /* Menu sistema fim */
+
+.ui-state-disable {
+	opacity: .80 !important;
+}
