--- a/VendaPedido/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/VendaPedido/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -7,16 +7,17 @@
 	<p:toolbar style="margin-top: 20px">
   		<p:toolbarGroup>
   			<p:button value="Novo" outcome="/pedidos/CadastroPedido"/>
-  			<p:commandButton value="Salvar" action="#{cadastroPedidoBean.salvar}" 
-  				update="@form" disabled="#{cadastroPedidoBean.pedido.naoAlteravel}"/>
+  			<p:commandButton value="Salvar" action="#{cadastroPedidoBean.salvar}"
+  				update="@form" disabled="#{cadastroPedidoBean.pedido.naoAlteravel}" />
   		</p:toolbarGroup>
   		
   		<p:toolbarGroup align="right">
-  			<p:commandButton value="Emitir"  action="#{emissaoPedidoBean.emitirPedido}"
-  				process="@form" update="@form" disabled="#{cadastroPedidoBean.pedido.naoEmissivel}"/>
+  			<p:commandButton value="Emitir" action="#{emissaoPedidoBean.emitirPedido}" 
+  				process="@form" update="@form" disabled="#{cadastroPedidoBean.pedido.naoEmissivel}" />
   			<p:commandButton value="Cancelar" action="#{cancelamentoPedidoBean.cancelarPedido}"
-  				process="@this" update="@form" disabled="#{cadastroPedidoBean.pedido.naoCancelavel}"/>
-  			<p:commandButton value="Enviar por e-mail"/>
+  				process="@this" update="@form" disabled="#{cadastroPedidoBean.pedido.naoCancelavel}" />
+  			<p:commandButton value="Enviar por e-mail" action="#{envioPedidoEmailBean.enviarPedido}"
+  				process="@this" disabled="#{cadastroPedidoBean.pedido.naoEnviavelPorEmail}" />
   			
   			<p:separator/>
   		
